# ac-quix-bridge

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  REPO_INDEX.md  docker-compose.dev.yml  fetch_byox_cert.py  quix.yaml  start-local-acc.ps1  start-local.ps1  startUpScript-acc.bat  startUpScript.bat
leaderboard-service/: .dockerignore  app.yaml  dockerfile  main.py  pyproject.toml
leaderboard-service/api/: app.py  auth.py  gate_math.py  lakehouse_client.py  live_stream.py  live_telemetry.py  models.py  mongo.py  partition_index.py  settings.py
leaderboard-service/api/routes/: leaderboard.py  leaderboard_dropdowns.py  leaderboard_real.py  leaderboard_stream.py
leaderboard-service/docs/: architecture-leaderboard-lake-resilience.md  architecture-leaderboard-live-first.md
leaderboard-service/leaderboard_service_state/: __init__.py  boot_seed.py  enrichment.py  gate_vector.py  lakehouse_client.py  pipeline.py  read_path.py  request_bridge.py  runtime.py  seed.py  settings.py  state_model.py
leaderboard-service/tests/: test_best_laps_raw_scan.py  test_fallback_enrichment.py  test_lake_resilience.py  test_live_session_raw_gate.py  test_on_assign_offsets.py  test_partition_index_manifest.py  test_state_gate_vector.py  test_state_model.py  test_state_pipeline.py  test_state_read_path.py  test_state_seed.py  test_ws_connect_nonblocking.py
leaderboard-service/ui/: Dockerfile.dev  next.config.js  package-lock.json  package.json  tsconfig.json
leaderboard-service/ui/app/: layout.tsx
leaderboard-service/ui/components/: leaderboard-tab.tsx  live-positions-table.tsx
leaderboard-service/ui/components/ui/: badge.tsx  table.tsx
leaderboard-service/ui/lib/api/: client.ts
leaderboard-service/ui/lib/hooks/: use-live-stream.ts
leaderboard-service/ui/lib/utils/: format.ts  leaderboard-window.ts
leaderboard-service/ui/public/: .gitkeep
leaderboard-service/ui/types/: leaderboard.ts
mock_config_api/: Dockerfile  main.py  pyproject.toml  seed_local.py
telemetry-chat/: .dockerignore  .env.example  README.md  app.yaml  dockerfile  main.py  pyproject.toml
telemetry-chat/app/: auth.py  config.py  lake.py  plot.py  telemetry.py
telemetry-chat/static/: chat.js  index.html  plot.js  plot.test.js  style.css
telemetry-chat/tests/: test_plot.py
telemetry-comparison/: .prettierrc.json  README.md  app.yaml  auth.py  channels.json  chat.py  config.py  dockerfile  eslint.config.js  local_auth.py  main.py  mcp_server.py  mongo.py  mongo_settings.py  package-lock.json  package.json  partition_filter.py  partition_walker.py  plans.py  pyproject.toml  quix_ai.py  requirements.txt  track_loader.py  tracks_config.json  video_proxy.py  vitest.setup.js
telemetry-comparison/kb/: agent_system_prompt.md  kb_ac_channels.md  kb_quixlake_api.md
telemetry-comparison/scripts/: probe_lakehouse.py
telemetry-comparison/static/: app.js  index.html  styles.css
telemetry-comparison/static/modules/: ai-plot-glue.js  auth.js  auth.test.js  charts.js  chat-overlay.js  chat.js  chat.test.js  data.js  debug-overlay.js  markdown.js  selections.js  state.js  sync.js  thinking-messages.js  thumb-preview.js  toast.js  track-map.js  video-overlay.js  video.js
telemetry-comparison/tests/: conftest.py  test_auth.py  test_chat.py  test_mcp_server.py  test_partition_filter.py  test_partition_values.py  test_plans.py  test_quix_ai.py  test_sessions.py  test_telemetry.py  test_track_loader.py
telemetry-comparison/tests/e2e/: conftest.py  test_session_selection.py
telemetry-comparison/tracks/ks_nurburgring/: layout_sprint_a.csv
test-manager-backend/: .gitignore  app.yaml  dockerfile  main.py  pyproject.toml
test-manager-backend/api/: app.py  auth.py  config_api.py  live_stream.py  live_telemetry.py  local_auth.py  models.py  mongo.py  notify.py  seed_data.py  settings.py  text.py  utils.py
test-manager-backend/api/routes/: admin.py  analyses.py  devices.py  drivers.py  environments.py  experiment_config.py  experiments.py  files.py  integrations.py  leaderboard.py  leaderboard_dropdowns.py  leaderboard_real.py  leaderboard_stream.py  links.py  live_positions_sim.py  logbook.py  portal.py  settings.py  tests.py  user.py
test-manager-backend/api/routes/mcp/: __init__.py  instrument.py  tools.py
test-manager-backend/scripts/: seed_local_viz.py
test-manager-backend/tests/: conftest.py  dcm_openapi.json  test_activity.py  test_admin.py  test_analyses.py  test_analysis_runner.py  test_auth.py  test_devices.py  test_drivers.py  test_drivers_identity.py  test_email_notify.py  test_environments.py  test_experiments.py  test_files.py  test_lake.py  test_leaderboard.py  test_logbook.py  test_lookups.py  test_mcp_server.py  test_pdf.py  test_seed_data.py  test_telemetry_viz.py  test_tests.py  test_text.py  test_validation_errors.py  utils.py
track-importer/: app.yaml  dockerfile  importer.py  main.py  mongo.py  pyproject.toml  settings.py
track-importer/data/tracks_csv/imola/: layout_imola.csv  layout_imola_corners.json
track-importer/data/tracks_csv/ks_black_cat_county/: layout_int.csv  layout_int_corners.json  layout_long.csv  layout_long_corners.json  layout_short.csv  layout_short_corners.json
track-importer/data/tracks_csv/ks_highlands/: layout_drift.csv  layout_drift_corners.json  layout_int.csv  layout_int_corners.json  layout_long.csv  layout_long_corners.json  layout_short.csv  layout_short_corners.json
track-importer/data/tracks_csv/ks_laguna_seca/: layout_ks_laguna_seca.csv  layout_ks_laguna_seca_corners.json
track-importer/data/tracks_csv/ks_monza66/: layout_full.csv  layout_full_corners.json  layout_junior.csv  layout_junior_corners.json  layout_road.csv  layout_road_corners.json
track-importer/data/tracks_csv/ks_nurburgring/: layout_gp_a.csv  layout_gp_a_corners.json  layout_gp_b.csv  layout_gp_b_corners.json  layout_sprint_a.csv  layout_sprint_a_corners.json  layout_sprint_b.csv  layout_sprint_b_corners.json
track-viewer/: app.yaml  dockerfile  main.py  pyproject.toml
track-viewer/app/: api.py  mongo.py  settings.py
track-viewer/static/: app.js  index.html
(+604 files in other folders)
