[project]
name = "leaderboard-service"
requires-python = ">=3.13"
version = "0.1.0"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pymongo",
    "pydantic",
    "pydantic-settings",
    "quixportal",
    "quixstreams",
    "pandas",
    "httpx",
    "asgi-correlation-id>=4.3.4",
]

[tool.uv.sources]
quixportal = { index = "quix-public" }

[[tool.uv.index]]
name = "quix-public"
url = "https://pkgs.dev.azure.com/quix-analytics/53f7fe95-59fe-4307-b479-2473b96de6d1/_packaging/public/pypi/simple/"
explicit = true
