[project]
name = "telemetry-chat"
version = "0.1.0"
description = "Natural-language chat → structured query → QuixLake plot. Built on Quix AI (no workspace) + telemetry-comparison's plotting primitives."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "pandas>=2.2",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "uvicorn[standard]>=0.30",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.8",
    "ty>=0.0.1a1",
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.ruff]
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: tests that hit the network or are otherwise expensive",
]
